# tremiNAL

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  crypto.rs  docker.rs  dpapi.rs  importers.rs  keygen.rs  knownhosts.rs  lib.rs  localfs.rs  main.rs  monitor.rs  pty.rs  remoteedit.rs  sftp.rs  ssh.rs  store.rs  tunnels.rs  vault.rs  vaultkey.rs
src/api/: index.ts
src/renderer/: App.tsx  Gate.tsx  SettingsContext.tsx  editorLang.ts  env.d.ts  index.html  keybindings.ts  main.tsx  paneTree.ts  styles.css  themes.ts
src/renderer/components/: CodeEditor.tsx  CommandPalette.tsx  DockerPanel.tsx  Icon.tsx  KeyGenModal.tsx  KiModal.tsx  MonitorPanel.tsx  PaneView.tsx  ServerForm.tsx  SettingsModal.tsx  SftpPanel.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TerminalView.tsx  UnlockScreen.tsx
src/shared/: types.ts
